--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-Adds a @WithLog AST for Groovy.  This attaches a Log4J Logger to the annotated class.
+// Adds a @WithLog AST for Groovy.  This attaches a Log4J Logger to the annotated class.
+import sublog.*
 
 @WithLog
 class Foo {
@@ -6,4 +7,4 @@ class Foo {
 	def logInstanceMsg() { log.info("This is an instance message!") }
 }
 
-Released under the WTFPL.  See LICENSE for more information.
+// Released under the WTFPL.  See LICENSE for more information.
