Updated some wording

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-// Adds a @WithLog AST for Groovy.  This attaches a Log4J Logger to the annotated class.
+// Provides a @WithLog AST Transform that attaches a Log4J Logger to the annotated class.
 import com.smokejumperit.sublog.*
 
 @WithLog
